Added ‘ALL’ submission.

--- a/paper.tex
+++ b/paper.tex
@@ -50,8 +50,8 @@ Amit Tagore,$^7$
 Diego Tuccillo,$^{9,10}$
 \newauthor
 Santiago Velasco-Forero,$^{10}$
-Camille Avestruz,$^{11-13,\dagger}$
-Nan Li,$^{12-14}$
+Camille Avestruz,$^{11,12,13,\dagger}$
+Nan Li,$^{12,13,14}$
 Matthew Lightman,$^{15}$
 \newauthor
 and ?\\
