--- a/references.bib
+++ b/references.bib
@@ -576,3 +576,87 @@ targeted at
 recurrent neural networks.}
 }
 
+
+@ARTICLE{avestruz_etal17,
+   author = {{Avestruz}, C. and {Li}, N. and {Lightman}, M. and {Collett}, T.~E. and 
+
+{Luo}, W.},
+    title = "{Automated Lensing Learner - I: An Automated Strong Lensing Identification Pipeline}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1704.02322},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+     year = 2017,
+    month = apr,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170402322A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{pedregosa_etal12,
+   author = {{Pedregosa}, F. and {Varoquaux}, G. and {Gramfort}, A. and {Michel}, V. and 
+
+
+{Thirion}, B. and {Grisel}, O. and {Blondel}, M. and {Prettenhofer}, P. and 
+{Weiss}, R. and {Dubourg}, V. and {Vanderplas}, J. and {Passos}, A. and 
+{Cournapeau}, D. and {Brucher}, M. and {Perrot}, M. and {Duchesnay}, {\'E}.
+},
+    title = "{Scikit-learn: Machine Learning in Python}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1201.0490},
+ primaryClass = "cs.LG",
+ keywords = {Computer Science - Learning, Computer Science - Mathematical Software},
+     year = 2012,
+    month = jan,
+   adsurl = {http://adsabs.harvard.edu/abs/2012arXiv1201.0490P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{dalalandtriggs_05,
+   author = {{Dalal}, N. and {Triggs}, B.},
+    title = "{Histograms of Oriented Gradients for Human Detection}",
+  journal = {IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+     year = 2005
+}
+
+
+@ARTICLE{li_etal16,
+   author = {{Li}, N. and {Gladders}, M.~D. and {Rangel}, E.~M. and {Florian}, \
+M.~K. and
+{Bleem}, L.~E. and {Heitmann}, K. and {Habib}, S. and {Fasel}, P.
+},
+    title = "{PICS: Simulations of Strong Gravitational Lensing in Galaxy Clust\
+ers}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1511.03673},
+ keywords = {galaxies: clusters: general, gravitational lensing: strong, method\
+s: numerical },
+     year = 2016,
+    month = sep,
+   volume = 828,
+      eid = 54,
+    pages = 54,
+      doi = {10.3847/0004-637X/828/1/54},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...828...54L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{collett_15,
+   author = {{Collett}, T.~E.},
+    title = "{The Population of Galaxy-Galaxy Strong Lenses in Forthcoming Opti\
+cal Imaging Surveys}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1507.02657},
+ keywords = {gravitational lensing: strong},
+     year = 2015,
+    month = sep,
+   volume = 811,
+      eid = {20},
+    pages = {20},
+      doi = {10.1088/0004-637X/811/1/20},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...811...20C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
