Filled in some introduction.

--- a/references.bib
+++ b/references.bib
@@ -660,3 +660,289 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...811...20C},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{1979Natur.279..381W,
+    author = {{Walsh}, D. and {Carswell}, R. F. and {Weymann}, R. J.},
+    title = {0957 + 561 A, B - Twin quasistellar objects or gravitational lens},
+    journal = {\nat},
+    year = 1979,
+    month = may,
+    volume = 279,
+    pages = {381--384},
+    url = {http://adsabs.harvard.edu/cgi-bin/nph-bib_query?bibcode=1979Natur.279..381W&db_key=AST},
+    adsnote = {Provided by the NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016MNRAS.455.1171M,
+   author = {{Marshall}, P.~J. and {Verma}, A. and {More}, A. and {Davis}, C.~P. and others },
+    title = "{SPACE WARPS - I. Crowdsourcing the discovery of gravitational lenses}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1504.06148},
+ primaryClass = "astro-ph.IM",
+ keywords = {gravitational lensing: strong, methods: statistical},
+     year = 2016,
+    month = jan,
+   volume = 455,
+    pages = {1171-1190},
+      doi = {10.1093/mnras/stv2009},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.455.1171M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016MNRAS.455.1191M,
+   author = {{More}, A. and {Verma}, A. and {Marshall}, P.~J. and {More}, S. and others },
+    title = "{SPACE WARPS- II. New gravitational lens candidates from the CFHTLS discovered through citizen science}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1504.05587},
+ keywords = {gravitational lensing: strong, methods: statistical},
+     year = 2016,
+    month = jan,
+   volume = 455,
+    pages = {1191-1210},
+      doi = {10.1093/mnras/stv1965},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.455.1191M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{euclidSLWGwhitepaper,
+   author = {SLWhitePaper},
+    title = "{Euclid Science with Strong Gravitational Lenses}",
+  journal = {?},
+ keywords = {gravitational lensing: strong},
+     year = 2017,
+   volume = 0,
+   pages = 0
+}
+
+@ARTICLE{2015aska.confE..84M,
+   author = {{McKean}, J. and {Jackson}, N. and {Vegetti}, S. and {Rybak}, M. and 
+	{Serjeant}, S. and {Koopmans}, L.~V.~E. and {Metcalf}, R.~B. and 
+	{Fassnacht}, C. and {Marshall}, P.~J. and {Pandey-Pommier}, M.
+	},
+    title = "{Strong Gravitational Lensing with the SKA}",
+  journal = {Advancing Astrophysics with the Square Kilometre Array (AASKA14)},
+archivePrefix = "arXiv",
+   eprint = {1502.03362},
+     year = 2015,
+    month = apr,
+      eid = {84},
+    pages = {84},
+   adsurl = {http://adsabs.harvard.edu/abs/2015aska.confE..84M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2010MNRAS.405.2579O,
+   author = {{Oguri}, M. and {Marshall}, P.~J.},
+    title = "{Gravitationally lensed quasars and supernovae in future wide-field optical imaging surveys}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1001.2037},
+ keywords = {gravitational lensing: strong, cosmological parameters, cosmology: theory},
+     year = 2010,
+    month = jul,
+   volume = 405,
+    pages = {2579-2593},
+      doi = {10.1111/j.1365-2966.2010.16639.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2010MNRAS.405.2579O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2003MNRAS.341...13B,
+   author = {{Browne}, I.~W.~A. and {Wilkinson}, P.~N. and {Jackson}, N.~J.~F. and others},
+    title = "{The Cosmic Lens All-Sky Survey - II. Gravitational lens candidate selection and follow-up}",
+  journal = {\mnras},
+   eprint = {astro-ph/0211069},
+ keywords = {gravitation, gravitational lensing, radio continuum: galaxies},
+     year = 2003,
+    month = may,
+   volume = 341,
+    pages = {13-32},
+      doi = {10.1046/j.1365-8711.2003.06257.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2003MNRAS.341...13B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2008MNRAS.389.1311J,
+   author = {{Jackson}, N.},
+    title = "{Gravitational lenses and lens candidates identified from the COSMOS field}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0806.3693},
+ keywords = {gravitational lensing },
+     year = 2008,
+    month = sep,
+   volume = 389,
+    pages = {1311-1318},
+      doi = {10.1111/j.1365-2966.2008.13629.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.389.1311J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008ApJS..176...19F,
+   author = {{Faure}, C. and {Kneib}, J.-P. and {Covone}, G. and {Tasca}, L. and others},
+    title = "{First Catalog of Strong Lens Candidates in the COSMOS Field}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {0802.2174},
+ keywords = {catalogs, galaxies: statistics, gravitational lensing },
+     year = 2008,
+    month = may,
+   volume = 176,
+      eid = {19-38},
+    pages = {19-38},
+      doi = {10.1086/526426},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJS..176...19F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2006ApJ...638..703B,
+   author = {{Bolton}, A.~S. and {Burles}, S. and {Koopmans}, L.~V.~E. and 
+	{Treu}, T. and {Moustakas}, L.~A.},
+    title = "{The Sloan Lens ACS Survey. I. A Large Spectroscopically Selected Sample of Massive Early-Type Lens Galaxies}",
+  journal = {\apj},
+   eprint = {astro-ph/0511453},
+ keywords = {Galaxies: Elliptical and Lenticular, cD, Galaxies: Evolution, Galaxies: Formation, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2006,
+    month = feb,
+   volume = 638,
+    pages = {703-724},
+      doi = {10.1086/498884},
+   adsurl = {http://adsabs.harvard.edu/abs/2006ApJ...638..703B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014ApJ...785..144G,
+   author = {{Gavazzi}, R. and {Marshall}, P.~J. and {Treu}, T. and {Sonnenfeld}, A.
+	},
+    title = "{RINGFINDER: Automated Detection of Galaxy-scale Gravitational Lenses in Ground-based Multi-filter Imaging Data}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1403.1041},
+ keywords = {methods: data analysis, methods: statistical, galaxies: elliptical and lenticular, cD, gravitational lensing: strong, surveys, techniques: miscellaneous },
+     year = 2014,
+    month = apr,
+   volume = 785,
+      eid = {144},
+    pages = {144},
+      doi = {10.1088/0004-637X/785/2/144},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...785..144G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015MNRAS.450.1441D,
+   author = {{Dieleman}, S. and {Willett}, K.~W. and {Dambre}, J.},
+    title = "{Rotation-invariant convolutional neural networks for galaxy morphology prediction}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1503.07077},
+ primaryClass = "astro-ph.IM",
+ keywords = {methods: data analysis, techniques: image processing, catalogues, galaxies: general},
+     year = 2015,
+    month = jun,
+   volume = 450,
+    pages = {1441-1459},
+      doi = {10.1093/mnras/stv632},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.450.1441D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2017MNRAS.465.1959C,
+   author = {{Cavuoti}, S. and {Amaro}, V. and {Brescia}, M. and {Vellucci}, C. and 
+	{Tortora}, C. and {Longo}, G.},
+    title = "{METAPHOR: a machine-learning-based method for the probability density estimation of photometric redshifts}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1611.02162},
+ primaryClass = "astro-ph.IM",
+ keywords = {techniques: photometric, galaxies: distances and redshifts, galaxies: photometry},
+     year = 2017,
+    month = feb,
+   volume = 465,
+    pages = {1959-1973},
+      doi = {10.1093/mnras/stw2930},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.465.1959C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016PASP..128j4502S,
+   author = {{Sadeh}, I. and {Abdalla}, F.~B. and {Lahav}, O.},
+    title = "{ANNz2: Photometric Redshift and Probability Distribution Function Estimation using Machine Learning}",
+  journal = {\pasp},
+archivePrefix = "arXiv",
+   eprint = {1507.00490},
+     year = 2016,
+    month = oct,
+   volume = 128,
+   number = 10,
+    pages = {104502},
+      doi = {10.1088/1538-3873/128/968/104502},
+   adsurl = {http://adsabs.harvard.edu/abs/2016PASP..128j4502S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017NewA...51..169S,
+   author = {{Samui}, S. and {Samui Pal}, S.},
+    title = "{Photo-z with CuBANz: An improved photometric redshift estimator using Clustering aided Back propagation Neural network}",
+  journal = {\na},
+archivePrefix = "arXiv",
+   eprint = {1609.03568},
+ keywords = {Methods: data analysis, Techniques: photometric, Galaxies: photometry, Galaxies: distances and redshifts},
+     year = 2017,
+    month = feb,
+   volume = 51,
+    pages = {169-177},
+      doi = {10.1016/j.newast.2016.09.002},
+   adsurl = {http://adsabs.harvard.edu/abs/2017NewA...51..169S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2016ApJS..225...31L,
+   author = {{Lochner}, M. and {McEwen}, J.~D. and {Peiris}, H.~V. and {Lahav}, O. and 
+	{Winter}, M.~K.},
+    title = "{Photometric Supernova Classification with Machine Learning}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1603.00882},
+ primaryClass = "astro-ph.IM",
+ keywords = {cosmology: observations, methods: data analysis, supernovae: general},
+     year = 2016,
+    month = aug,
+   volume = 225,
+      eid = {31},
+    pages = {31},
+      doi = {10.3847/0067-0049/225/2/31},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJS..225...31L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2017arXiv170207675P,
+   author = {{Petrillo}, C.~E. and {Tortora}, C. and {Chatterjee}, S. and 
+	{Vernardos}, G. and {Koopmans}, L.~V.~E. and {Verdoes Kleijn}, G. and 
+	{Napolitano}, N.~R. and {Covone}, G. and {Schneider}, P. and 
+	{Grado}, A. and {McFarland}, J.},
+    title = "{Finding Strong Gravitational Lenses in the Kilo Degree Survey with Convolutional Neural Networks}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1702.07675},
+ keywords = {Astrophysics - Astrophysics of Galaxies},
+     year = 2017,
+    month = feb,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170207675P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017MNRAS.465.4325O,
+   author = {{Ostrovski}, F. and {McMahon}, R.~G. and {Connolly}, A.~J. and others},
+    title = "{VDES J2325-5229 a z = 2.7 gravitationally lensed quasar discovered using morphology-independent supervised machine learning}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1607.01391},
+ keywords = {gravitational lensing: strong, methods: observational, methods: statistical, quasars: general},
+     year = 2017,
+    month = mar,
+   volume = 465,
+    pages = {4325-4334},
+      doi = {10.1093/mnras/stw2958},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.465.4325O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
