--- a/paper.tex
+++ b/paper.tex
@@ -14,6 +14,7 @@
 \def\mnras{Monthly Notices of the Royal Astronomical Society}
 \def\aj{Astronomical Journal}
 \def\aaps{AAPS}
+\def\nat{Nature}
 
 
 \usepackage{newtxtext,newtxmath}
@@ -23,6 +24,35 @@
 
 \newcommand{\red}[1]{{\color{red} #1}}
 \newcommand{\degree}{^{\circ}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{etoolbox}
+\makeatletter
+\newcount\c@additionalboxlevel
+\setcounter{additionalboxlevel}{0}
+\newcount\c@maxboxlevel
+\setcounter{maxboxlevel}{1}
+\patchcmd\@combinedblfloats{\box\@outputbox}{%
+  \stepcounter{additionalboxlevel}%
+  \box\@outputbox
+}{}{\errmessage{\noexpand\@combinedblfloats could not be patched}}
+
+\AtBeginShipout{%
+  \ifnum\value{additionalboxlevel}>\value{maxboxlevel}%
+    \typeout{Warning: maxboxlevel might be too small, increase to %
+      \the\value{additionalboxlevel}%
+    }%
+  \fi 
+  \@whilenum\value{additionalboxlevel}<\value{maxboxlevel}\do{%
+    \typeout{* Additional boxing of page `\thepage'}%
+    \setbox\AtBeginShipoutBox=\hbox{\copy\AtBeginShipoutBox}%
+    \stepcounter{additionalboxlevel}%
+  }%
+  \setcounter{additionalboxlevel}{0}%
+}
+\makeatother
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 %%%%%%%%%%%%%%%%%%% TITLE PAGE %%%%%%%%%%%%%%%%%%%
 
 
@@ -37,23 +67,25 @@ Emmanuel Bertin,$^3$
 R\'emi Cabanac,$^2$ 
 Etienne Decenci\`ere,$^{10}$
 Remi Flamary,$^8$
-Mario Geiger,$^6$ 
+Raphael Gavazzi,$^{17}$ 
 \newauthor
+Mario Geiger,$^6$ 
 Philippa Hartley,$^7$
 Marc Huertas-Company,$^9$
 Neal Jackson,$^7$ 
-Jean-Paul Kneib,$^6$
 \newauthor
+Eric Jullo,$^{16}$
+Jean-Paul Kneib,$^6$
 Christoph Sch\"{a}fer,$^6$ 
 Alessandro Sonnenfeld,$^5$ 
+\newauthor
 Amit Tagore,$^7$
 Diego Tuccillo,$^{9,10}$
-\newauthor
 Santiago Velasco-Forero,$^{10}$
 Camille Avestruz,$^{11,12,13,\dagger}$
+\newauthor
 Nan Li,$^{12,13,14}$
 Matthew Lightman,$^{15}$
-\newauthor
 and ?\\
 % List of institutions
 $^{1}$ Departimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gabetti 93/2, 4012 Bologna, Italy \\
@@ -71,6 +103,8 @@ $^{12}${Kavli Institute for Cosmological Physics, The University of Chicago, Chi
 $^{13}${Department of Astronomy \& Astrophysics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
 $^{14}${High Energy Physics Division, Argonne National Laboratory, Lemont, IL 60439}\\
 $^{15}${JPMorgan Chase, Chicago, IL 60603 U.S.A.}\\
+$^{16}$\red{LAM} \\
+$^{17}$\red{IAP} \\
 $^\dagger${Provost's Postdoctoral Scholar at the University of Chicago}\\
 }
 
@@ -95,17 +129,21 @@ gravitational lensing -- cosmology
 \section{Introduction}
 \label{sec:introduction}
 
-Arcfinder\citep{2007A&A...472..341S}
+Strong gravitational lenses are rare cases where a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.  These take the form of multiple images of a quasar and Einstein rings surrounding a galaxy and of highly distorted arcs seen through galaxy groups and clusters.  The first strong lens was discovered in 1979 \citep{1979Natur.279..381W} and since then many valuable scientific uses have been found for them.  They have been used to study the mass distribution in galaxies and substructure in dark matter.  They have been used to measure the Hubble constant and other cosmological parameters.
+Their magnification has been used as a natural telescope to observe otherwise undetectable objects.   They have put limits on the self interaction of dark matter and on the theory of gravitation.  Through microlensing they have been used to study the structure of quasars.   To access this wealth of information the first step is to find the lenses.  \red{Could use some citations in this paragraph.}
 
-\citet{2006astro.ph..6757A} arc finder used in the CFHT \citep{2007A&A...461..813C,2012ApJ...749...38M}
+The Square Kilometer Array (SKA)\footnote{http://skatelescope.org/}, the Large Synoptic Survey Telescope (LSST)\footnote{https://www.lsst.org/} and the Euclid space telescope\footnote{https://www.euclid-ec.org/} are expected to increase the number of potential lenses by orders of magnitude \citep{collett_15,euclidSLWGwhitepaper,2015aska.confE..84M,2010MNRAS.405.2579O}.   For example it is estimated that there will be approximately 200,000 observable galaxy-galaxy lenses in the Euclid data set among \red{tens of billions (better number??)} of potential objects .  So far, less than a thousand lenses have been found in total across many heterogeneous data sets.  These surveys will bring a new era for strong lensing where large relatively well defined samples of lenses will be possible.  It will also require handling much larger quantities of data than has been customary in this field.
 
-Some finders compare each image with a lens model \citep{2009ApJ...694..924M,2010A&A...517A..25S}.
+Up to this point, the most widely used method for finding lenses in imaging surveys has been by visual inspection of a samples candidates that have been selected on the bases of luminosity and/or color.  This has been done in the radio \citep{2003MNRAS.341...13B} and in the visible with space and ground based data \citep{2008MNRAS.389.1311J,2008ApJS..176...19F} \red{(Maybe there are some others to cite here?)}.  A related method pioneered by the SPACE WARPS project \citep{2016MNRAS.455.1171M,2016MNRAS.455.1191M} has been to crowd source the visual inspection through an online platform.  These efforts have proved very fruitful, but they deal with orders of magnitude fewer candidates and lenses than will be necessary in the future.  Dealing with such large quantities of data will not be practical for any visual inspection approach.  In addition, the efficiency and detection bias of human inspection methods are difficult to rigorously quantify.
 
-\citep{2014A&A...566A..63J,2016A&A...592A..75P}
+Galaxy scale lenses have also been searched for spectroscopicly by looking for high redshift stellar lines in the spectra of lower redshift large galaxies.  Notably this was done in the Sloan Lens ACS (SLACS) survey to producing a relatively well defined and pure sample of Einstein ring lenses \citep{2006ApJ...638..703B}.  However, spectroscopy is telescope-time consuming and for the foreseeable future we are not likely to have spectroscopic surveys that cover anywhere near the number of objects as the planned imaging surveys.
 
-some numbers about future surveys
+Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like features \citep{2006astro.ph..6757A,2007A&A...472..341S} and rings \citep{2014ApJ...785..144G,2014A&A...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007A&A...461..813C,2012ApJ...749...38M,2016A&A...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2010A&A...517A..25S}.
 
-some background on past methods
+More recently machine learning techniques that have become widely used in the fields computer image processing and artificial intelegence 
+have been applied to this problem and others in astronomy, in particular, artificial neural networks (ANNs) and support vector machines (SVM). These algorithms do not pick out particular predefined features, but learn from a training set which features are most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy they are beginning to be used for catagorizing galaxies morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017arXiv170207675P,2017MNRAS.465.4325O}.
+
+Given the future of this field with large amounts of data coming soon and many new ideas emerging we thought it would be a good time to stage a series of challenges to stimulate new work, determine what can realistically be done in lens finding and get a better idea of the strengths and weaknesses to different methods.  The long term goal is to get a set of algorithms that can handle Euclid, LSST or SKA data sets and produce high purity and high completeness lens samples with well defined efficiency or selection.  We anticipate further challenges in the future were the realism of the data simulations will become progressively more realistic.  Here we have chosen to concentrate on galaxy/small group scale lenses where the background source is a galaxy because we feel that this is were the most progress can be made and the scientific return is the highest, but QSO lenses and cluster/group lenses challenges may follow.
 
 The paper is organized as follows.  The form of the challenge and its rules are described in the next section.  The methods used to simulate mock images of galaxies and gravitational lenses are described in section~\ref{sec:simulation}.  In section~\ref{sec:entries} each of the methods that were used to solve the challenge are briefly described.  We discuss the metrics used to evaluate entries in section~\ref{sec:figure_of_merit}.  The performance of each of the methods broken down in different ways is presented in section~\ref{sec:performance}.  Finally,  in section~\ref{sec:conclusion}, we conclude with a discussion of what was learned and how methods can be improved in the future.
 
@@ -162,7 +200,7 @@ These images of the of foreground galaxies are not intended to reproduce the tru
 
 To represent the mass of the galaxies we make a gridded map of the surface brightness at 3 times the resolution of the final image.  The surface brightness map in converted into a mass map by assuming a uniform mass-to-light ratio of 1.5 solar in the target band.  This mass map is added to the lens before the ray tracing is done.
 
-The code is able to produce any combination of foreground galaxies, lensed image and noise that is desired.  For the training set we provided an image of the total lens with noise, an image of the foreground galaxies with noise and and image of the lensed background source without noise.
+The code is able to produce any combination of foreground galaxies, lensed image and noise that is desired.  For the training set we provided an image of the total lens with noise, an image of the foreground galaxies with noise and image of the lensed background source without noise.
 For the test sets only the final images were provided to participants although all the information was stored for analyzing the entries.
 
 \subsection{space-based}
